tests/parser/tests/cases/should_fail/missing_comma_in_struct_field/case.hash
// Create a new dog called viktor! 
let viktor = Dog { 
    name = "Viktor",
    has_brother = true // <--- Error should be reported here since there is no comma....
    age = 12, 
    gender = false
};
